Prepare for Railway deployment

--- a/meerucrete/.env
+++ b/meerucrete/.env
@@ -2,13 +2,13 @@
 SECRET_KEY=your-very-secret-django-key
 DEBUG=True
 
-# DATABASE
+# LOCAL DATABASE (Railway will ignore these)
 DB_NAME=meerucrete_db
 DB_USER=postgres
 DB_PASSWORD=1234
 DB_HOST=localhost
 DB_PORT=5432
 
-# EMAIL
+# EMAIL SETTINGS
 EMAIL_HOST_USER=mohammedsowban008@gmail.com
 EMAIL_HOST_PASSWORD=epdjnqqwydojadqm
