--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
+# SECURITY
 SECRET_KEY=your-very-secret-key
-DEBUG=True
-DB_NAME=meerucrete_db
-DB_USER=postgres
-DB_PASSWORD=1234
-DB_HOST=localhost
-DB_PORT=5432
-EMAIL_HOST_USER=mohammedsowban008@gmail.com
-EMAIL_HOST_PASSWORD=epdjnqqwydojadqm
+DEBUG=False
+
+# DATABASE (from Railway)
+DATABASE_URL=postgresql://postgres:oFqjXrHLiclWBwZGSUWhtDUNoYqwuHxN@postgres.railway.internal:5432/railway
+
+# EMAIL
+EMAIL_HOST_USER=mohammedsowban08@gmail.com
+EMAIL_HOST_PASSWORD=sowban123
+
+# Allowed hosts
+ALLOWED_HOSTS=meerucrete-backend-production.up.railway.app
