--- a/.env
+++ b/.env
@@ -1,13 +1,18 @@
-# SECURITY
+# ==========================
+# Local Development Settings
+# ==========================
+
 SECRET_KEY=your-very-secret-key
-DEBUG=False
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
+DATABASE_URL=postgresql://postgres:oFqjXrHLiclWBwZGSUWhtDUNoYqwuHxN@yamanote.proxy.rlwy.net:52210/railway
+# Local PostgreSQL
+DB_NAME=meerucrete_db
+DB_USER=postgres
+DB_PASSWORD=1234
+DB_HOST=localhost
+DB_PORT=5432
 
-# DATABASE (from Railway)
-DATABASE_URL=postgresql://postgres:oFqjXrHLiclWBwZGSUWhtDUNoYqwuHxN@postgres.railway.internal:5432/railway
-
-# EMAIL
-EMAIL_HOST_USER=mohammedsowban08@gmail.com
-EMAIL_HOST_PASSWORD=sowban123
-
-# Allowed hosts
-ALLOWED_HOSTS=meerucrete-backend-production.up.railway.app
+# Email
+EMAIL_HOST_USER=mohammedsowban008@gmail.com
+EMAIL_HOST_PASSWORD=sowban@123
