--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@
 
 SECRET_KEY=your-very-secret-key
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-DATABASE_URL=postgresql://postgres:oFqjXrHLiclWBwZGSUWhtDUNoYqwuHxN@yamanote.proxy.rlwy.net:52210/railway
+ALLOWED_HOSTS=meerucrete-backend-production.up.railway.app,127.0.0.1,localhost
+
+DATABASE_URL=postgresql://postgres:oFqjXrHLiclWBwZGSUWhtDUNoYqwuHxN@postgres.railway.internal:5432/railway
 # Local PostgreSQL
 DB_NAME=meerucrete_db
 DB_USER=postgres
